# glassglyph-scanner

./: .gitignore  404.html  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
api/: index.html
cli/: index.html
detection-rules/: index.html
docs/: api.md  cli.md  detection-rules.md  index.md  library.md  threat-model.md
examples/: bidi_override.txt  clean.txt  generate_glassworm.py  glassworm_attack.txt  homoglyph_url_spoof.txt  zero_width_strip.txt
search/: search_index.json
src/glassglyph_scanner/: __init__.py  cli.py  sanitizer.py  server.py
tests/: test_cli.py  test_sanitizer.py  test_server.py
threat-model/: index.html
